--- a/src/main/resources/templates/app/login.html
+++ b/src/main/resources/templates/app/login.html
@@ -47,10 +47,8 @@
         <!-- BEGIN LOGIN -->
         <div class="content be-radius" >
             <!-- BEGIN LOGIN FORM -->
-            <form class="login-form" action="${url}" method="post">
+            <form class="login-form" action="/login/" method="post">
                 <h3 class="form-title">登录</h3>
-                <input type="hidden" name="came_from"
-                    value="${came_from}"/>
                 <div class="alert alert-danger display-hide be-radius">
                     <span class=""></span>
                     <button class="close pull-right" style="margin-top: 5px" data-close="alert"></button>
